--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,2 @@
-$bgColor: red;
-
-h1{
-    background: $bgColor;
-}
+@import "bootstrap_overrides";
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
