--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,17 @@
-h1 {
-  background: red;
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 2 | @import "../../node_modules/bootstrap/scss/"
+ *   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+ *   '
+ *   src\sass\main.scss 2:9  root stylesheet */
+
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 2 \2502  @import \"../../node_modules/bootstrap/scss/\"\a   \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   src\\sass\\main.scss 2:9  root stylesheet";
 }
