--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,3 @@
-@import "bootstrap_overrides";
+@import "bs_overrides";
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 @import "styles";
