--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11865,3 +11865,16 @@ textarea.form-control-lg {
 .btn:hover {
   color: white;
 }
+
+#service i {
+  font-size: 1.875rem;
+  border: 0.1875rem solid;
+  width: 4.375rem;
+  height: 4.375rem;
+  border-radius: 50%;
+}
+
+iframe {
+  width: 100%;
+  height: 31.25rem;
+}
