--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -7,3 +7,20 @@ $font-color: white;
         color: $font-color;
     }
 }
+
+#service {
+    i {
+        font-size: 1.875rem;
+        border: .1875rem solid;
+        width: 4.375rem;
+        height: 4.375rem;
+        border-radius: 50%;
+    }
+
+
+}
+
+iframe {
+    width: 100%;
+    height: 31.25rem;
+}
