--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11859,19 +11859,15 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.btn {
-  color: white;
-}
-.btn:hover {
-  color: white;
-}
-
 #service i {
   font-size: 1.875rem;
   border: 0.1875rem solid;
   width: 4.375rem;
   height: 4.375rem;
   border-radius: 50%;
+}
+#service i:hover {
+  background: #0d6efd;
 }
 
 iframe {
