--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11869,3 +11869,9 @@ iframe {
   width: 100%;
   height: 31.25rem;
 }
+
+@media (max-width: 768px) {
+  #social-media {
+    margin: 16px 0;
+  }
+}
