--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -12,7 +12,7 @@ iframe {
 }
 
 @media (max-width: 768px) {
-    #social-media, #email {
+    #social-media, #email, #phone {
         margin: 16px 0;
     }
 }
