--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -12,7 +12,7 @@ iframe {
 }
 
 @media (max-width: 768px) {
-    #header_social-media, #header_email, #header_phone {
+    #header_social-media {
         margin: 10px 0;
     }
 }
